<resources>
    <string name="app_name">Taxi Dispatching</string>

    // Components' text in activity_log_in.xml
    <string name="createAccountButton">Create Account</string>
    <string name="signInButton">Sign In</string>
    <string name="titleText">Taxi\nDispatching</string>
    <string name="imageText">taxilogo</string>

    //Create Account Page
    <string name="hintText">This name will be used in communicating with the taxi drive</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordHint">This password will be used in verification</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="smsButtonText">Send SMS</string>
    <string name="verificationText">Verification</string>
    <string name="smsHint">6 digits</string>
    <string name="registerButton">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="emailHint">Your email</string>

    //Custom Dialog text
    <string name="dialogTitle">Appointment\nConfirmation</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="passengers_in_register">Passengers</string>
    <string name="driver_in_register">Driver</string>
    <string name="phone_prefix">+852</string>
    <string name="register_for_a_new_taxi">Register For a New Taxi</string>
    <string name="scan_qr_code_to_sign_in">Scan QR code to sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_taxi_account">Delete taxi account (You can only delete the taxi that you owned)</string>
    <string name="reminder_text">This QR Code will saved at the \'taxi\' folder in your external storage</string>

</resources>
